--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ matplotlib==3.9.1
 mdurl==0.1.2
 numpy==2.0.1
 opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
