--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.1.0
 aioice==0.9.0
 aiortc==1.9.0
 altair==5.3.0
@@ -9,25 +10,37 @@ certifi==2024.7.4
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
 cryptography==43.0.0
+cycler==0.12.1
 dnspython==2.6.1
+flatbuffers==24.3.25
+fonttools==4.53.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-crc32c==1.5.0
 idna==3.7
 ifaddr==0.2.0
+jax==0.4.30
+jaxlib==0.4.30
 Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.1
 mdurl==0.1.2
+mediapipe==0.10.14
+ml-dtypes==0.4.0
 numpy==2.0.1
+opencv-contrib-python==4.10.0.84
 opencv-python-headless==4.10.0.84
+opt-einsum==3.3.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
-protobuf==5.27.2
+protobuf==4.25.4
 pyarrow==17.0.0
 pycparser==2.22
 pydeck==0.9.1
@@ -35,14 +48,17 @@ pyee==11.1.0
 Pygments==2.18.0
 pylibsrtp==0.10.0
 pyOpenSSL==24.2.1
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.19.1
+scipy==1.14.0
 six==1.16.0
 smmap==5.0.1
+sounddevice==0.4.7
 streamlit==1.36.0
 streamlit-webrtc==0.47.7
 tenacity==8.5.0
