--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 absl-py==2.1.0
+aiohttp==3.9.5
+aiohttp-retry==2.8.3
 aioice==0.9.0
 aiortc==1.9.0
+aiosignal==1.3.1
 altair==5.3.0
+async-timeout==4.0.3
 attrs==23.2.0
 av==12.3.0
 blinker==1.8.2
@@ -13,9 +17,13 @@ click==8.1.7
 contourpy==1.2.1
 cryptography==43.0.0
 cycler==0.12.1
+defusedxml==0.7.1
 dnspython==2.6.1
+filelock==3.15.4
 flatbuffers==24.3.25
 fonttools==4.53.1
+frozenlist==1.4.1
+fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-crc32c==1.5.0
@@ -33,38 +41,56 @@ matplotlib==3.9.1
 mdurl==0.1.2
 mediapipe==0.10.14
 ml-dtypes==0.4.0
-numpy==2.0.1
+mpmath==1.3.0
+multidict==6.0.5
+networkx==3.3
+numpy==1.26.4
 opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 opt-einsum==3.3.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 protobuf==4.25.4
+psutil==6.0.0
+py-cpuinfo==9.0.0
 pyarrow==17.0.0
 pycparser==2.22
 pydeck==0.9.1
 pyee==11.1.0
 Pygments==2.18.0
+PyJWT==2.8.0
 pylibsrtp==0.10.0
 pyOpenSSL==24.2.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.19.1
 scipy==1.14.0
+seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
 sounddevice==0.4.7
 streamlit==1.36.0
 streamlit-webrtc==0.47.7
+supervision==0.22.0
+sympy==1.13.1
 tenacity==8.5.0
 toml==0.10.2
 toolz==0.12.1
+torch==2.4.0
+torchvision==0.19.0
 tornado==6.4.1
+tqdm==4.66.4
+twilio==9.2.3
 typing_extensions==4.12.2
 tzdata==2024.1
+ultralytics==8.2.66
+ultralytics-thop==2.0.0
 urllib3==2.2.2
+yarl==1.9.4
