--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ mpmath==1.3.0
 multidict==6.0.5
 networkx==3.3
 numpy==1.26.4
+pencv-contrib-python-headless==4.10.0.84
 opencv-python-headless==4.10.0.84
 packaging==24.1
 pandas==2.2.2
